--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "grunt-contrib-coffee": "*",
     "grunt-contrib-concat": "*",
     "grunt-contrib-copy": "*",
-    "grunt-contrib-watch": "*"
+    "grunt-contrib-watch": "*",
+    "q": "^1.2.0",
+    "react": "^0.13.1"
   }
 }
